changed icon to receive height instead of width

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -10,7 +10,7 @@
 }
 .icon {
   padding-right: 8px;
-  width: 14px;
+  height: var(--medium-font);
   filter: var(--icon-filter-white);
 }
 .medium {
